--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,17 +16,17 @@ build:
 
 requirements:
   host:
-    - python >=3.8.0
+    - python {{ python_min }}
     - hatchling
     - pip
   run:
     # Note: psycopg2-binary is noarch, and works also for linux, so instead of adding
     # an os-dependent requirement, we instead use psycopg2-binary for simplicity.
-    - python >=3.8.0
+    - python >={{ python_min }}
     - psycopg2-binary >=2.9,<3.0
-    - dbt-adapters >=0.1.0a1,<2.0
-    - dbt-core >=1.8.0a1
-    - dbt-common >=0.1.0a1,<2.0
+    - dbt-adapters >=1.7.0,<2.0
+    - dbt-core >=1.8.0
+    - dbt-common >=1.0.4,<2.0
     - agate >=1.0,<2.0
 
 test:
@@ -35,6 +35,7 @@ test:
   commands:
     - pip check
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
